chore: upgrade to JDK21